// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<back-top> demo: > render [basic] correctly 1`] = `
<div data-v-34f22a63="" class="wrapper">
  <ul data-v-34f22a63="" id="basic-demo">
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
    <li data-v-34f22a63="">This is the content</li>
  </ul>
  <transition-stub data-v-34f22a63="" name="fade-in" appear="false" persisted="false" css="true" style="position: absolute;">
    <!--v-if-->
  </transition-stub>
</div>
`;

exports[`<back-top> demo: > render [custom] correctly 1`] = `
<div data-v-34bd2dcb="" class="wrapper">
  <ul data-v-34bd2dcb="" id="custom-demo">
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
    <li data-v-34bd2dcb="">This is the content</li>
  </ul>
  <transition-stub data-v-34bd2dcb="" name="fade-in" appear="false" persisted="false" css="true" style="position: absolute;">
    <!--v-if-->
  </transition-stub>
</div>
`;
